chore: ignore env/build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,32 @@ admin_backup_report.csv
 .env*
 .next
 node_modules
+.env.local
+.env*
+.next
+node_modules
+.env.local
+.env*
+.next
+node_modules
+.env.local
+.env*
+.next
+node_modules
+.env.local
+.env*
+.next
+node_modules
+.env.local
+.env*
+.next
+node_modules
+.env.local
+.env*
+.next
+node_modules
+
+.env.local
+.env*
+.next
+node_modules
