chore: normalize .gitignore for subproject

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,10 @@
-node_modules
+node_modules/
 .env.local
 .env
 .env.*
 
 # Next.js build output
 .next/
-
-# Node modules
-node_modules/
 
 # Local backups/reports
 _found_admin_backup.txt
@@ -16,9 +13,4 @@ admin_backup_report.csv
 # IDE / OS
 .vscode/
 .DS_Store
-node_modules
-
-.env.local
-.env*
-.next
-node_modules
+# IDE / OS
