--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
+NEXT_PUBLIC_ADMIN_API=/api/admin-api
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=CHANGEME_IN_LOCAL
+MONGO_URI=mongodb://localhost:27017/aytekdb
+MONGO_DB=aytekdb
+PORT=5000
 # MongoDB connection string
 MONGO_URI=mongodb+srv://user:pass@cluster/dbname
 
