--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,24 @@
-node_modules/
+# env
 .env.local
-.env
-.env.*
+.env*
+!.env.example
 
-# Next.js build output
+# build/cache
 .next/
+node_modules/
+dist/
+coverage/
 
-# Local backups/reports
-_found_admin_backup.txt
-admin_backup_report.csv
+# logs/temp
+logs/
+*.log
+npm-debug.log*
+yarn-error.log*
+*.tmp
+*.zip
 
-# IDE / OS
-.vscode/
+# OS/IDE
 .DS_Store
+Thumbs.db
+.vscode/
 # IDE / OS
