chore: update .env.example

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ NEXTAUTH_URL=http://localhost:3000
 # (Optional) Cloudinary
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_UPLOAD_PRESET=
+
+# Frontend collection title shown on product cards (optional)
+NEXT_PUBLIC_COLLECTION_TITLE=Cappadocia Collection
