--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@eslint/js": "^9.34.0",
     "@next/eslint-plugin-next": "^15.5.2",
     "@types/node": "24.3.1",
+    "@types.react": "19.1.12",
     "@types/react": "19.1.12",
     "@typescript-eslint/parser": "^8.42.0",
     "autoprefixer": "^10.4.21",
@@ -34,6 +35,9 @@
     "eslint-config-next": "^15.5.2",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.3.0",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "playwright": "^1.35.0",
     "png-to-ico": "^3.0.1",
     "postcss": "^8.5.6",
     "postcss-nesting": "^13.0.2",
