--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -19,6 +19,8 @@
   },
   "devDependencies": {
     "@types/react": "19.1.13",
-    "cross-env": "^10.0.0"
+    "cross-env": "^10.0.0",
+    "typescript": "^5.2.2",
+    "@types/node": "^20.0.0"
   }
 }
