ci(admin-app): add next build cache, concurrency and document ADMIN_SECRET in README

--- a/.github/workflows/admin-app-tests.yml
+++ b/.github/workflows/admin-app-tests.yml
@@ -31,6 +31,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Cache Next.js build output
+        uses: actions/cache@v4
+        with:
+          path: admin-app/.next/cache
+          key: ${{ runner.os }}-next-${{ hashFiles('admin-app/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-next-
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
