--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "ioredis": "^5.3.2",
     "next": "^15.5.2",
+    "csv-parse": "^6.0.0",
+    "zod": "^4.25.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
