--- a/package.json
+++ b/package.json
@@ -27,23 +27,22 @@
     "@eslint/js": "^9.34.0",
     "@next/eslint-plugin-next": "^15.5.2",
     "@types/node": "24.3.1",
-    "@types.react": "19.1.12",
     "@types/react": "19.1.12",
     "@typescript-eslint/parser": "^8.42.0",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
     "eslint": "^9.34.0",
     "eslint-config-next": "^15.5.2",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.3.0",
-    "concurrently": "^8.2.2",
-    "cross-env": "^7.0.3",
     "playwright": "^1.35.0",
     "png-to-ico": "^3.0.1",
     "postcss": "^8.5.6",
     "postcss-nesting": "^13.0.2",
     "sharp": "^0.34.3",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.4.2"
+    "typescript": "5.9.2"
   },
   "scripts": {
     "start": "next start -p 3000",
@@ -60,9 +59,9 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+      "last 2 versions",
+      "> 0.5%",
+      "not dead"
     ],
     "development": [
       "last 1 chrome version",
