--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,2 @@
 * text=auto
-*.js text eol=lf
-*.jsx text eol=lf
-*.ts text eol=lf
-*.tsx text eol=lf
-*.json text eol=lf
-*.css text eol=lf
-*.scss text eol=lf
-*.md text eol=lf
+*.{js,jsx,ts,tsx,css,scss,md,mdx,json,yml,yaml,html} text eol=lf
