--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -7,19 +7,19 @@
     "build": "cross-env next build",
     "start": "cross-env next start -p 3001",
     "test:admin": "cross-env node scripts/test-admin-auth.js",
-  "smoke:admin": "cross-env node scripts/smoke-login.js",
-  "smoke:admin:demo": "cross-env ADMIN_PASSWORD=12345 ADMIN_SECRET=aytekrugs node scripts/smoke-login.js",
-  "dev:demo": "cross-env ADMIN_SECRET=dev-secret next dev -p 3001",
+    "smoke:admin": "cross-env node scripts/smoke-login.js",
+    "smoke:admin:demo": "cross-env ADMIN_PASSWORD=12345 ADMIN_SECRET=aytekrugs node scripts/smoke-login.js",
+    "dev:demo": "cross-env ADMIN_SECRET=dev-secret next dev -p 3001",
     "test:admin:demo": "cross-env ADMIN_SECRET=dev-secret node scripts/test-admin-auth.js",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --max-warnings=0"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --no-cache --max-warnings=0"
   },
   "dependencies": {
+    "csv-parse": "^5.3.2",
     "ioredis": "^5.3.2",
     "next": "^15.5.2",
-  "csv-parse": "^5.3.2",
-  "zod": "^3.23.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^3.23.1"
   },
   "devDependencies": {
     "@types/node": "^20.19.14",
